# de_procedu

./: CMakeLists.txt  container.h  container_clear.cpp  container_clear.h  container_hashfunctions.cpp  container_hashfunctions.h  container_in.cpp  container_in.h  container_multi.cpp  container_multi.h  container_out.cpp  container_out.h  container_sort.cpp  container_sort.h  container_struct.h  element.h  figure.h  figure_clear.cpp  figure_clear.h  figure_funct.cpp  figure_funct.h  figure_getkey.cpp  figure_getkey.h  figure_in.cpp  figure_in.h  figure_out.cpp  figure_out.h  figure_struct.h  mType.h  main.cpp  parallelepiped.h  parallelepiped_clear.cpp  parallelepiped_clear.h  parallelepiped_funct.cpp  parallelepiped_funct.h  parallelepiped_in.cpp  parallelepiped_in.h  parallelepiped_out.cpp  parallelepiped_out.h  parallelepiped_struct.h  (+20 more)
Google_tests/: CMakeLists.txt
Google_tests/tests/: test1.cpp
doc/: Стандарты кодирования.docx
